04/25/23: Added A Great Deal of Styling for Page Content by Fixing Class Graduation Labels to Have No Extra Margin Styling Around It on the Alumni index.html Page

--- a/css/alumni.css
+++ b/css/alumni.css
@@ -40,6 +40,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0px;
 }
 
 .alumni-page-content-section-heading h1 img {
